<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BeerTrader</string>
    <!--<string name="action_settings">something here</string>-->
    <string name="ProfileButton">Profile &amp; Settings</string>
    <string name="PostButton">Post Beer</string>
    <string name="MatchButton">Matches</string>
    <string name="postText">PostText</string>
    <string name="matchText">MatchText</string>
    <string name="profileName">Barry Duffman</string>
    <string name="createUser">CREATE NEW USER</string>
    <string name="signUp">SIGN UP</string>
    <string name="login">LOGIN</string>
    <string name="app_settings_title_text">NOTIFICATIONS</string>
    <string name="profile_app_settings_button">App Settings</string>
    <string name="contact_text">Contact BeerTrader</string>
    <string name="submit">SUBMIT</string>
    <string name="title_activity_create_user">CreateUser</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="beerName">beer_name</string>
    <string name="brewery">breweryName</string>
    <string name="beerType">beerType</string>
    <string name="AddBeer">Add Beer</string>
    <string name="Inventory">Inventory</string>
    <string name="FavesPage">favs_page</string>
    <string name="title_activity_chat">ChatActivity</string>

    <string name="send_message">SEND</string>
    <string name="chars_num">Chars Number</string>
    <string name="title_activity_pending_activity">pending_activity</string>
    <string name="matches_page_title">Matches</string>

</resources>
