<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fffff52e"
    android:paddingTop="50dp">




    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ProfileButton"
        android:id="@+id/profileButton"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/custom_button"
        android:textColor="@android:color/white"
        style="@android:style/DeviceDefault.SegmentedButton"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/PostButton"
        android:id="@+id/postButton"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/custom_button"
        android:textColor="@android:color/white"
        style="@android:style/DeviceDefault.SegmentedButton"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/MatchButton"
        android:id="@+id/matchesButton"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/custom_button"
        android:textColor="@android:color/white"
        style="@android:style/DeviceDefault.SegmentedButton"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/createUser"
        android:id="@+id/createUser"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/custom_button"
        android:textColor="@android:color/white"
        style="@android:style/DeviceDefault.SegmentedButton"/>

</LinearLayout>