<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/profile_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:weightSum="1"
    android:background="#ffffffff">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userPicture"
        android:layout_marginTop="42dp"
        android:src="@drawable/duff"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/profileName"
        android:id="@+id/userName"
        android:layout_below="@+id/userPicture"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_app_settings_button"
        android:id="@+id/profileAppSettingsButton"
        android:layout_below="@+id/userName"
        android:layout_alignParentStart="true"
        android:layout_marginTop="38dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_text"
        android:id="@+id/profileContactButton"
        android:layout_below="@+id/profileAppSettingsButton"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Share BeerTrader"
        android:id="@+id/profileShareButton"
        android:layout_below="@+id/profileContactButton"
        android:layout_alignParentStart="true" />

</RelativeLayout>