<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="#ffffffff">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/InvLablePic"
            android:padding="4dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="#ffffffff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/beerName"
            android:text="@string/beerName"
            android:textColor="#ff000000"
            android:textSize="16sp"
            android:background="#ffffffff" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="#ffffffff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/brewery"
            android:text="@string/brewery"
            android:textColor="#ff000000"
            android:textSize="16sp"
            android:background="#ffffffff" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="#ffffffff">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/beerType"
            android:text="@string/beerType"
            android:textColor="#ff000000"
            android:textSize="16sp"
            android:background="#ffffffff" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Beer"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:textColor="#ff000000" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:text="Add Beer"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/custom_button"
        android:textColor="@android:color/white"
        style="@android:style/DeviceDefault.SegmentedButton"/>
</LinearLayout>